start work with slider

--- a/companies/companies.css
+++ b/companies/companies.css
@@ -46,3 +46,19 @@ div.count span {
 	border-collapse: collapse;
 	padding: 0.5em;
 }
+.item {
+	margin: 1em 1em;
+	background: green;
+}
+.item > div {
+	display: inline-block;
+}
+
+.image span {
+	display: block;
+}
+
+.text {
+	vertical-align: top;
+	margin-left: 1em;
+}
