--- a/companies/companies.css
+++ b/companies/companies.css
@@ -32,6 +32,7 @@ div.count span {
 	font-size: 2em;
 	font-weight: bold;
 }
+
 .menu-item {
 	height: 40%;
 }
@@ -46,19 +47,31 @@ div.count span {
 	border-collapse: collapse;
 	padding: 0.5em;
 }
-.item {
-	margin: 1em 1em;
-	background: green;
-}
-.item > div {
-	display: inline-block;
-}
-
 .image span {
 	display: block;
 }
 
 .text {
 	vertical-align: top;
-	margin-left: 1em;
+	overflow-y:hidden;
+}
+
+#slides_control img {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  max-height: 12.25em;
+}
+
+.title {
+	text-align: left;
+}
+.item {
+	padding-bottom: 3.25em;
+	height: 22em;
+	background-color:rgb(228,255,253);
+}
+.item.row {
+	margin: 0;
 }
