--- a/companies/companies.css
+++ b/companies/companies.css
@@ -7,7 +7,14 @@
 .head {
 	background: rgb(218,218,218);
 	height: 2.5em;
+	padding-top: 0.5em;
 	vertical-align: -webkit-baseline-middle;
+}
+
+.head i {
+	float: right;
+	margin-right: 2em;
+	font-size: 1.5em;
 }
 
 div.head span  {
@@ -70,7 +77,7 @@ div.count span {
 .item {
 	padding-bottom: 3.25em;
 	height: 22em;
-	background-color:rgb(228,255,253);
+	background-color:rgb(241,252, 95);
 }
 .item.row {
 	margin: 0;
