--- a/companies/companies.css
+++ b/companies/companies.css
@@ -1,6 +1,6 @@
 .wrapper {
 	font-size: 16px;
-	max-width:980px;
+	max-width: 980px;
 	margin: 0 auto;
 }
 
@@ -46,7 +46,7 @@ div.count span {
 
 .companies {
 	overflow-y: auto;
-	height:15em;
+	height: 15em;
 }
 
 .company {
@@ -60,7 +60,7 @@ div.count span {
 
 .text {
 	vertical-align: top;
-	overflow-y:hidden;
+	overflow-y: hidden;
 }
 
 #slides_control img {
@@ -78,7 +78,7 @@ div.count span {
 .item {
 	padding-bottom: 3.25em;
 	height: 24em;
-	background-color:rgb(241,252, 95);
+	background-color: rgb(241,252, 95);
 }
 
 .item.row {
@@ -96,7 +96,7 @@ div.count span {
 	position: relative;
 	display: inline-block;
 	width: 10em;
-	height:90%;
+	height: 90%;
 	margin-left: 2em;
 	vertical-align: bottom;
 }
@@ -110,14 +110,19 @@ div.count span {
 .bar-text {
 	display: inline-block;
 	border-bottom: 0.25em solid blue;
-	width:100%;
+	width: 100%;
 }
 
 .sort span {
 	display: inline-block;
 	float: right;
-	margin-right: 1em;
 }
+
+.but {
+	margin-right: 1em;
+	background-color: rgba(1, 17, 255, 0.4);
+}
+
 .loader {
 	position: absolute;
 	bottom: -425%;
@@ -129,13 +134,6 @@ div.count span {
     height: 120px;
     animation: spin 2s linear infinite;
   	margin-top: 150em;
-}
-.first {
-	bottom: -850%;
-	left: 35%;
-}
-.menu-item {
-	min-height:1px;
 }
 
 @keyframes spin {
